tests/should_fail/match_enum_or_incomplete.nv
// should_fail: enum OR pattern missing a variant (not exhaustive)
module match_enum_or_incomplete

enum Color { Red, Green, Blue }

fn classify(c: Color) -> String {
    return match c {
        Red() | Green() => "warm"
    }
}
